<resources>
    <string name="app_name">RFID</string>
    <string name="email">Email</string>
    <string name="num">Contact Number</string>
    <string name="pass">Password</string>
    <string name="forgot"><font color="blue">Forgot Password?</font></string>
    <string name="codeMessage">We sent you a 6 digit code to verify your email address</string>
    <string name="fieldMessage">Enter in the field below.</string>
    <string name="DidntgetCode">Didn\'t get the code?</string>
    <string name="resendText">Resend</string>
    <string name="countDownText">01:00</string>
    <string name="expireText">Expires in: </string>
    <string name="signin1">
        <font color="white">
            Enter your email and password to login
        </font>
    </string>
    <string name="signin">
        Sign In to your\nAccount
    </string>
    <string name="login">
        <font size="25">
            <font color="black">
                Login
            </font>
        </font>
    </string>
    <string name="forgot_page">
        <font size="25">
            <font color="white">
                Forgot your password?
            </font>
        </font>
    </string>
    <string name="reset">
        <font size="25">
            <font color="white">
                Reset Password
            </font>
        </font>
    </string>
    <string name="resetPassDesc">
        Password must be 8 characters long.
        \nPassword must contain at least one number or\nspecial character.
        \nPassword must contain at leat one upper case.
    </string>
    <string name="rfid"><font color="white">RFID Application</font></string>
    <string name="entrmail"><font color="white">Enter your email address</font></string>
    <string name="entrnum"><font color="white">Enter your Contact Number</font></string>
    <string name="send"><font color="white">Send ➔</font></string>
    <string name="try_anther"><font color="white">try another way</font></string>
    <string name="Login_text">Login</string>
    <string name="Verify_text">Verify your email address.</string>
    <string name="Email">(sample@gmail.com)</string>
    <string name="rmnabs">Remaining \nAbsence</string>
    <string name="submitBtn">
        <font size="15">
            <font color="white">
                Submit
            </font>
        </font>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_name">student_name</string>
</resources>