<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".auth.LoginEmailVerification">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLogoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideFormTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_h_bottom_anchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_v_margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_v_margin_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backbtn"
        app:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/guide_v_margin_start"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="UseAppTint" />

    <LinearLayout
        android:id="@+id/headerSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guide_v_margin_end"
        app:layout_constraintStart_toStartOf="@+id/guide_v_margin_start"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:layout_constraintBottom_toTopOf="@+id/guideLogoBottom">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/email_icon" />

        <TextView
            android:id="@+id/verifyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Verify_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/verificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/codeMessage"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Email"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/fieldBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/fieldMessage"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <include
        android:id="@+id/rfidApplication"
        layout="@layout/component_logo"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideLogoBottom"
        app:layout_constraintBottom_toTopOf="@id/guideFormTop"
        app:layout_constraintDimensionRatio="3:1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/codeBoxContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        android:background="@drawable/edit_textbg"
        app:layout_constraintStart_toStartOf="@+id/guide_v_margin_start"
        app:layout_constraintEnd_toStartOf="@+id/guide_v_margin_end"
        app:layout_constraintTop_toTopOf="@id/guideFormTop"
        app:layout_constraintBottom_toTopOf="@+id/guide_h_bottom_anchor"
        app:layout_constraintWidth_max="420dp"
        app:layout_constraintHeight_max="300dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g3"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:id="@+id/inputBoxes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/g1">

            <EditText
                android:id="@+id/etInputBox1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/num_box_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />
            <EditText
                android:id="@+id/etInputBox2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/num_box_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />
            <EditText
                android:id="@+id/etInputBox3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/num_box_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />
            <EditText
                android:id="@+id/etInputBox4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/num_box_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />
            <EditText
                android:id="@+id/etInputBox5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/num_box_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />
            <EditText
                android:id="@+id/etInputBox6"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/num_box_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resendSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/g2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtDidntGetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DidntgetCode"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resendText"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/expireSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/resendSection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtExpiresIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expireText"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCountdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/countDownText"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/btnVerifying1"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/submitBtn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/g3"
            app:layout_constraintBottom_toTopOf="@id/g4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>